test/src/e2e_vm_tests/test_programs/should_pass/language/import_star_submodules/src/foo/bar.sw
library;

pub fn func() -> u64 {
    10
}
