test/src/e2e_vm_tests/test_programs/should_fail/dep_annotated/src/bar.sw
library;

fn foo() -> bool { true }
